fixed issue with mobile layout where the examples section did not fit the content

--- a/src/style.css
+++ b/src/style.css
@@ -139,6 +139,7 @@ footer ul {
   }
   #example {
     grid-column: span 1;
+    height: fit-content;
   }
   #examples {
     flex-direction: column;
